Работа с БД вынесена в отделный класс - task_storage.go
