# docs/swagger.yaml
@@ -42,6 +42,10 @@ paths:
             items:
               $ref: '#/definitions/models.Task'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
